8257800: CompileCommand TypedMethodOptionMatcher::parse_method_pattern() may over consume